[gd_scene load_steps=2 format=3 uid="uid://cd5n8v8xs40ek"]

[ext_resource type="Script" uid="uid://buwvlxgf6m3gk" path="res://main.gd" id="1_ig7tw"]

[node name="Main" type="Node"]
script = ExtResource("1_ig7tw")

[node name="GameLayer" type="CanvasLayer" parent="."]

[node name="HudLayer" type="CanvasLayer" parent="."]

[node name="TipLayer" type="CanvasLayer" parent="."]

[node name="WindowLayer" type="CanvasLayer" parent="."]

[node name="MenuLayer" type="CanvasLayer" parent="."]

[node name="PopupLayer" type="CanvasLayer" parent="."]

[node name="GlobalTipLayer" type="CanvasLayer" parent="."]

[node name="LoadingLayer" type="CanvasLayer" parent="."]

[node name="DebugLayer" type="CanvasLayer" parent="."]
